- Ajustes en grid para demo.

--- a/basis/basis.css
+++ b/basis/basis.css
@@ -72,3 +72,81 @@
     --width-media: calc(100% / 1);
   }
 }
+
+
+/* caso 7 y 8 */
+
+details * {
+  box-sizing: border-box;
+}
+details {
+  border: 1px solid grey;
+  border-radius: 4px;
+}
+details summary {
+  cursor: pointer;
+}
+details h3 {
+  display: inline-block;
+}
+
+/* grid */
+.flex[class*="flex"] {
+  /* flex: 1; */
+}
+details .wrapper {
+  position: relative;
+}
+details .wrapper::before {
+  content: 'max-width: 960px';
+  position: absolute;
+  top: -21px;
+  width: 100%;
+  text-align: center;
+  border-bottom: 2px solid red;
+}
+
+.grid-1 { 
+  --width : 300;
+}
+
+.grid-2 { 
+  --width : 300;
+}
+
+[class*='grid-'] .box {
+  background-color: lightgrey;
+  border: 1px dashed ;
+}
+
+[class*='grid-'] .box{
+  background-color: lightgrey;
+  min-width: calc(var(--width) * 1px);
+  flex-basis: calc(var(--width) * 1px);
+}
+
+[class*='grid-'] .box::after {
+  counter-reset: variable var(--width);
+  content: counter(variable) 'px';
+  display: block;
+  width: 100%;
+  max-width: calc(var(--width) * 1px);
+  border-bottom: 2px solid red;
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.grid-2 .box.one{
+  --width: 200
+}
+
+.grid-2 .box.two{
+  --width: 300
+}
+
+.grid-2 .box.three{
+  --width: 400
+}
